panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_error_duplicate_declaration_specifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_duplicate_declaration_specifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration with duplicate `const` declaration specifier
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_duplicate_declaration_specifier.c:1:11]
   │
 1 │ int const const x;
   │     ──┬── ──┬──  
   │       │     ╰──── help: remove this `const`
   │       │          
   │       ╰────────── first `const` here
───╯
