panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_error_function_type_is_qualified.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_function_type_is_qualified.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: redeclaration of `g` with different type: `fn() -> int const` vs. `fn() -> int const`
    ╭─[panko/tests/cases/decl_in_global_scope/test_error_function_type_is_qualified.c:14:11]
    │
 10 │ F const g;
    │         ┬  
    │         ╰── previously declared here with type `fn() -> int const`
    │ 
 14 │ int const g() {}
    │           ┬  
    │           ╰── new declaration with different type `fn() -> int const`
────╯
