panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_function_param_qualifiers_are_not_part_of_the_function_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_function_param_qualifiers_are_not_part_of_the_function_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration f~0 `fn(∅: int) -> int` ∅)
   (declaration f~0 `fn(∅: int) -> int` ∅)
   (declaration f~0 `fn(∅: int) -> int` ∅)
   (declaration f~0 `fn(∅: int) -> int` ∅)
   (declaration f~0 `fn(∅: int) -> int` ∅))

----- stderr -----
