panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_tentative_definitions.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition tentative~0 `int` ∅)
   (tentative-definition tentative~0 `int` ∅)
   (tentative-definition tentative~0 `int` ∅))

----- stderr -----
